--- a/assets/css/scss/components/_btn.scss
+++ b/assets/css/scss/components/_btn.scss
@@ -10,6 +10,7 @@
     display: block;
     background-color: #ccc;
     padding: 12px;
+    font-size: 14px;
 
     &.btn-purple {
         background-color: $purple;
