--- a/views/login.html
+++ b/views/login.html
@@ -4,14 +4,14 @@
     </h1>
     <img src="assets/img/offy-logo.svg" alt="Offy - caminho mais curto para os descontos" width="164">
     <div class="login-btn">
-        <button class="btn btn-blue">
+        <a href="/" class="btn btn-blue">
             Entrar com facebook
-        </button>
-        <button class="btn btn-white">
+        </a>
+        <a href="/" class="btn btn-white">
             Entrar com e-mail
-        </button>
-        <button class="btn btn-black">
+        </a>
+        <a href="/" class="btn btn-black">
             não tenho conta
-        </button>
+        </a>
     </div>
 </main>
