--- a/views/login.html
+++ b/views/login.html
@@ -4,13 +4,13 @@
     </h1>
     <img src="assets/img/offy-logo.svg" alt="Offy - caminho mais curto para os descontos" width="164">
     <div class="login-btn">
-        <a href="/" class="btn btn-blue">
+        <a href="#/" class="btn btn-blue">
             Entrar com facebook
         </a>
-        <a href="/" class="btn btn-white">
+        <a href="#/" class="btn btn-white">
             Entrar com e-mail
         </a>
-        <a href="/" class="btn btn-black">
+        <a href="#/" class="btn btn-black">
             não tenho conta
         </a>
     </div>
