--- a/views/partials/menu.html
+++ b/views/partials/menu.html
@@ -1,5 +1,5 @@
 <nav class="menu">
-	<a href="/" class="menu-link active">
+	<a href="#/" class="menu-link active">
 		<svg class="icon icon-menu-offers">
 			<title>Ofertas</title>
 			<use xlink:href="#icon-menu-offers"></use>
