--- a/views/partials/svg.html
+++ b/views/partials/svg.html
@@ -188,179 +188,144 @@
 </defs>
 </svg>
 
-<div class="">
-    <div class="hide">
-        <svg class="icon icon-cat-food"><use xlink:href="#icon-cat-food"></use></svg><span class="name"> icon-cat-food</span>
-    </div>
-
-
-    <div class="hide">
-        <svg class="icon icon-cat-drink"><use xlink:href="#icon-cat-drink"></use></svg><span class="name"> icon-cat-drink</span>
-    </div>
-
-
-    <div class="hide">
-        <svg class="icon icon-cat-shoe"><use xlink:href="#icon-cat-shoe"></use></svg><span class="name"> icon-cat-shoe</span>
-    </div>
-
-
-    <div class="hide">
-        <svg class="icon icon-cat-home"><use xlink:href="#icon-cat-home"></use></svg><span class="name"> icon-cat-home</span>
-    </div>
-
-
-    <div class="hide">
-        <svg class="icon icon-cat-electronic"><use xlink:href="#icon-cat-electronic"></use></svg><span class="name"> icon-cat-electronic</span>
-    </div>
-
-
-    <div class="hide">
-        <svg class="icon icon-cat-game"><use xlink:href="#icon-cat-game"></use></svg><span class="name"> icon-cat-game</span>
-    </div>
-
-
-    <div class="hide">
-        <svg class="icon icon-filter-zone"><use xlink:href="#icon-filter-zone"></use></svg><span class="name"> icon-filter-zone</span>
-    </div>
-
-
-    <div class="hide">
-        <svg class="icon icon-filter-near"><use xlink:href="#icon-filter-near"></use></svg><span class="name"> icon-filter-near</span>
-    </div>
-
-
-    <div class="hide">
-        <svg class="icon icon-filter-far"><use xlink:href="#icon-filter-far"></use></svg><span class="name"> icon-filter-far</span>
-    </div>
-
-
-    <div class="hide">
-        <svg class="icon icon-filter-city"><use xlink:href="#icon-filter-city"></use></svg><span class="name"> icon-filter-city</span>
-    </div>
-
-
-    <div class="hide">
-        <svg class="icon icon-menu-add"><use xlink:href="#icon-menu-add"></use></svg><span class="name"> icon-menu-add</span>
-    </div>
-
-
-    <div class="hide">
-        <svg class="icon icon-menu-pig"><use xlink:href="#icon-menu-pig"></use></svg><span class="name"> icon-menu-pig</span>
-    </div>
-
-
-    <div class="hide">
-        <svg class="icon icon-menu-offers"><use xlink:href="#icon-menu-offers"></use></svg><span class="name"> icon-menu-offers</span>
-    </div>
-
-
-    <div class="hide">
-        <svg class="icon icon-menu-alerts"><use xlink:href="#icon-menu-alerts"></use></svg><span class="name"> icon-menu-alerts</span>
-    </div>
-
-
-    <div class="hide">
-        <svg class="icon icon-menu-user"><use xlink:href="#icon-menu-user"></use></svg><span class="name"> icon-menu-user</span>
-    </div>
-
-
-    <div class="hide">
-        <svg class="icon icon-shared"><use xlink:href="#icon-shared"></use></svg><span class="name"> icon-shared</span>
-    </div>
-
-
-    <div class="hide">
-        <svg class="icon icon-option"><use xlink:href="#icon-option"></use></svg><span class="name"> icon-option</span>
-    </div>
-
-
-    <div class="hide">
-        <svg class="icon icon-back"><use xlink:href="#icon-back"></use></svg><span class="name"> icon-back</span>
-    </div>
-
-
-    <div class="hide">
-        <svg class="icon icon-repeat"><use xlink:href="#icon-repeat"></use></svg><span class="name"> icon-repeat</span>
-    </div>
-
-
-    <div class="hide">
-        <svg class="icon icon-pig"><use xlink:href="#icon-pig"></use></svg><span class="name"> icon-pig</span>
-    </div>
-
-
-    <div class="hide">
-        <svg class="icon icon-photo"><use xlink:href="#icon-photo"></use></svg><span class="name"> icon-photo</span>
-    </div>
-
-
-    <div class="hide">
-        <svg class="icon icon-password"><use xlink:href="#icon-password"></use></svg><span class="name"> icon-password</span>
-    </div>
-
-
-    <div class="hide">
-        <svg class="icon icon-map"><use xlink:href="#icon-map"></use></svg><span class="name"> icon-map</span>
-    </div>
-
-
-    <div class="hide">
-        <svg class="icon icon-location"><use xlink:href="#icon-location"></use></svg><span class="name"> icon-location</span>
-    </div>
-
-
-    <div class="hide">
-        <svg class="icon icon-filter"><use xlink:href="#icon-filter"></use></svg><span class="name"> icon-filter</span>
-    </div>
-
-
-    <div class="hide">
-        <svg class="icon icon-eye"><use xlink:href="#icon-eye"></use></svg><span class="name"> icon-eye</span>
-    </div>
-
-
-    <div class="hide">
-        <svg class="icon icon-email"><use xlink:href="#icon-email"></use></svg><span class="name"> icon-email</span>
-    </div>
-
-
-    <div class="hide">
-        <svg class="icon icon-clear"><use xlink:href="#icon-clear"></use></svg><span class="name"> icon-clear</span>
-    </div>
-
-
-    <div class="hide">
-        <svg class="icon icon-add-photo"><use xlink:href="#icon-add-photo"></use></svg><span class="name"> icon-add-photo</span>
-    </div>
-
-
-    <div class="hide">
-        <svg class="icon icon-comment"><use xlink:href="#icon-comment"></use></svg><span class="name"> icon-comment</span>
-    </div>
-
-
-    <div class="hide">
-        <svg class="icon icon-time"><use xlink:href="#icon-time"></use></svg><span class="name"> icon-time</span>
-    </div>
-
-
-    <div class="hide">
-        <svg class="icon icon-close"><use xlink:href="#icon-close"></use></svg><span class="name"> icon-close</span>
-    </div>
-
-
-    <div class="hide">
-        <svg class="icon icon-dropdown"><use xlink:href="#icon-dropdown"></use></svg><span class="name"> icon-dropdown</span>
-    </div>
-
-
-    <div class="hide">
-        <svg class="icon icon-check"><use xlink:href="#icon-check"></use></svg><span class="name"> icon-check</span>
-    </div>
-
-
-    <div class="hide">
-        <svg class="icon icon-search"><use xlink:href="#icon-search"></use></svg><span class="name"> icon-search</span>
-    </div>
-
-</div>
+<div class="hide">
+
+        <svg class="icon icon-cat-food">
+            <use xlink:href="#icon-cat-food"></use>
+        </svg>
+
+        <svg class="icon icon-cat-drink">
+            <use xlink:href="#icon-cat-drink"></use>
+        </svg>
+
+        <svg class="icon icon-cat-shoe">
+            <use xlink:href="#icon-cat-shoe"></use>
+        </svg>
+
+        <svg class="icon icon-cat-home">
+            <use xlink:href="#icon-cat-home"></use>
+        </svg>
+
+        <svg class="icon icon-cat-electronic">
+            <use xlink:href="#icon-cat-electronic"></use>
+        </svg>
+
+        <svg class="icon icon-cat-game">
+            <use xlink:href="#icon-cat-game"></use>
+        </svg>
+
+        <svg class="icon icon-filter-zone">
+            <use xlink:href="#icon-filter-zone"></use>
+        </svg>
+
+        <svg class="icon icon-filter-near">
+            <use xlink:href="#icon-filter-near"></use>
+        </svg>
+
+        <svg class="icon icon-filter-far">
+            <use xlink:href="#icon-filter-far"></use>
+        </svg>
+
+        <svg class="icon icon-filter-city">
+            <use xlink:href="#icon-filter-city"></use>
+        </svg>
+
+        <svg class="icon icon-menu-add">
+            <use xlink:href="#icon-menu-add"></use>
+        </svg>
+
+        <svg class="icon icon-menu-pig">
+            <use xlink:href="#icon-menu-pig"></use>
+        </svg>
+
+        <svg class="icon icon-menu-offers">
+            <use xlink:href="#icon-menu-offers"></use>
+        </svg>
+
+        <svg class="icon icon-menu-alerts">
+            <use xlink:href="#icon-menu-alerts"></use>
+        </svg>
+
+        <svg class="icon icon-menu-user">
+            <use xlink:href="#icon-menu-user"></use>
+        </svg>
+
+        <svg class="icon icon-shared">
+            <use xlink:href="#icon-shared"></use>
+        </svg>
+
+        <svg class="icon icon-option">
+            <use xlink:href="#icon-option"></use>
+        </svg>
+
+        <svg class="icon icon-back">
+            <use xlink:href="#icon-back"></use>
+        </svg>
+
+        <svg class="icon icon-repeat">
+            <use xlink:href="#icon-repeat"></use>
+        </svg>
+
+        <svg class="icon icon-pig">
+            <use xlink:href="#icon-pig"></use>
+        </svg>
+
+        <svg class="icon icon-photo">
+            <use xlink:href="#icon-photo"></use>
+        </svg>
+
+        <svg class="icon icon-password">
+            <use xlink:href="#icon-password"></use>
+        </svg>
+
+        <svg class="icon icon-map">
+            <use xlink:href="#icon-map"></use>
+        </svg>
+
+        <svg class="icon icon-location">
+            <use xlink:href="#icon-location"></use>
+        </svg>
+
+        <svg class="icon icon-filter">
+            <use xlink:href="#icon-filter"></use>
+        </svg>
+
+        <svg class="icon icon-eye">
+            <use xlink:href="#icon-eye"></use>
+        </svg>
+
+        <svg class="icon icon-email">
+            <use xlink:href="#icon-email"></use>
+        </svg>
+
+        <svg class="icon icon-clear">
+            <use xlink:href="#icon-clear"></use>
+        </svg>
+
+        <svg class="icon icon-add-photo">
+            <use xlink:href="#icon-add-photo"></use>
+        </svg>
+
+        <svg class="icon icon-comment">
+            <use xlink:href="#icon-comment"></use>
+        </svg>
+
+        <svg class="icon icon-time">
+            <use xlink:href="#icon-time"></use>
+        </svg>
+
+        <svg class="icon icon-close">
+            <use xlink:href="#icon-close"></use>
+        </svg>
+
+        <svg class="icon icon-dropdown">
+            <use xlink:href="#icon-dropdown"></use>
+        </svg>
+
+        <svg class="icon icon-check">
+            <use xlink:href="#icon-check"></use>
+        </svg>
+
+        <svg class="icon icon-search">
+            <use xlink:href="#icon-search"></use>
+        </svg>
