--- a/assets/css/scss/helpers/_reset.scss
+++ b/assets/css/scss/helpers/_reset.scss
@@ -48,7 +48,10 @@ button {
 input,
 textarea {
     font-family: $font;
-    font-size: 16px;
+    font-size: 14px;
+    color: $black;
+    border: none;
+    background-color: transparent;
 
     &:focus {
         outline: 0;
