--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -1,6 +1,6 @@
 
-	<img src="assets/img/offy-logo.svg" alt="Offy - caminho mais curto para os descontos">
-	<button class="header-search js-btnSearch">
+	<img src="assets/img/offy-logo.svg" alt="Offy - caminho mais curto para os descontos" width="80" height="26" class="header-logo">
+	<button class="header-btnSearch js-btnSearch">
 		<svg class="icon icon-search">
 			<use xlink:href="#icon-search"></use>
 		</svg>
