--- a/assets/css/scss/components/_header.scss
+++ b/assets/css/scss/components/_header.scss
@@ -4,27 +4,39 @@
 	position: fixed;
 	width: 100%;
 	top: 0;
+	display: flex;
+	align-items: center;
 	z-index: $z-index-menu;
-
-	img {
-		width: 80px;
-		margin: 12px 14px;
-		float: left;
-	}
-
-	.header-search {
-		padding: 10px 14px 6px;
-		float: right;
-		display: inline-block;
-
-		.icon-search {
-			width: 24px;
-			height: 24px;
-			fill: #FFF;
-		}
-	}
 
 	+ main {
 		padding-top: 68px;
 	}
+}
+
+.header-title {
+	color: #FFF;
+	font-weight: 900;
+	font-size: 18px;
+	text-transform: uppercase;
+	padding: 4px 4px 0;
+}
+
+.header-logo {
+	margin: 12px 14px;
+	float: left;
+}
+
+.header-btnSearch {
+	padding: 14px 14px 8px;
+	margin-left: auto;
+
+	.icon {
+		width: 20px;
+		height: 20px;
+		fill: #FFF;
+	}
+}
+
+.header-arrowBack {
+
 }
