--- a/assets/css/scss/components/_inputGroup.scss
+++ b/assets/css/scss/components/_inputGroup.scss
@@ -9,7 +9,6 @@
     .inputGroup-field {
         padding: 10px;
         border-bottom: 1px solid #9e9e9e;
-        // border: 1px solid #9e9e9e;
         width: 100%;
     }
 
@@ -21,7 +20,12 @@
         height: 16px;
 
         + .inputGroup-field {
-            padding-left: 24px;
+            padding-left: 26px;
+        }
+
+        &.icon-right {
+            right: 0;
+            left: inherit;
         }
     }
 }
