--- a/assets/css/scss/pages/_login.scss
+++ b/assets/css/scss/pages/_login.scss
@@ -1,92 +1,76 @@
 .login {
-    background: url(../img/login.jpg) no-repeat fixed;
+    background: url(../img/login.jpg) no-repeat;
     background-size: cover;
-    position: relative;
     height: 100%;
+    min-height: 100vh;
     text-align: center;
+}
 
-    .login-title {
-        font-size: 12px;
-        text-transform: uppercase;
+.login-title {
+    font-size: 12px;
+    text-transform: uppercase;
+    color: #FFF;
+    font-weight: normal;
+    max-width: 170px;
+    margin: 0 auto;
+    padding: 40px 0;
+}
+
+.login-actionBtns {
+    margin-top: 160px;
+}
+
+.login-btn {
+    margin: 8px auto;
+    display: inline-block;
+    max-width: 250px;
+}
+
+// INPUT EMAIL
+.login-inputGroup {
+    max-width: 214px;
+    margin: 0 auto 16px;
+
+    &:first-child {
+        margin-top: 76px;
+    }
+
+    .icon {
+        fill: #FFF;
+    }
+
+    .inputGroup-field {
         color: #FFF;
-        font-weight: normal;
-        max-width: 170px;
-        margin: 0 auto;
-        padding: 40px 0;
+        border-color: #e5d6e6;
+        @include inputPlaceholder(#e5d6e6);
     }
 
-    .login-linkBack {
-        position: absolute;
-        left: 0;
-        top: 0;
-        padding: 16px 12px;
-
-        .icon {
-            fill: #FFF;
-            width: 20px;
-            height: 20px;
-        }
+    .icon-eye {
+        fill: #b674ba;
+        width: 22px;
+        height: 22px;
     }
+}
 
-    .login-btn {
-        margin-top: 160px;
-    }
+.login-btnEnter {
+    max-width: 150px;
+    margin: auto;
+}
 
-    .btn {
-        margin: 8px auto;
-        display: inline-block;
-        max-width: 250px;
-    }
+.login-forgotPassword,
+.login-notAccount {
+    font-size: 11px;
+    color: #FFF;
+    font-weight: bold;
+    display: block;
+}
 
-    // INPUT EMAIL
-    .inputGroup {
-        max-width: 214px;
-        margin: 0 auto 16px;
+.login-forgotPassword {
+    margin: 14px auto 40px;
+}
 
-        &:first-child {
-            margin-top: 76px;
-        }
-
-        .icon {
-            fill: #FFF;
-        }
-
-        .inputGroup-field {
-            color: #FFF;
-            border-color: #FFF;
-            border-color: #e5d6e6;
-            @include inputPlaceholder(#e5d6e6);
-        }
-
-        .icon-eye {
-            fill: #b674ba;
-            width: 22px;
-            height: 22px;
-            right: 0;
-            left: inherit;
-
-        }
-    }
-
-    .login-btnEnter {
-        max-width: 150px;
-    }
-
-    .login-forgotPassword,
-    .login-notAccount {
-        font-size: 11px;
-        color: #FFF;
-        font-weight: bold;
-        display: block;
-    }
-
-    .login-forgotPassword {
-        margin: 14px auto 40px;
-    }
-
-    .login-notAccount {
-        text-transform: uppercase;
-        text-decoration: underline;
-        margin-top: 30px;
-    }
+.login-notAccount {
+    text-transform: uppercase;
+    text-decoration: underline;
+    margin-top: 30px;
 }
