--- a/views/partials/menu.html
+++ b/views/partials/menu.html
@@ -8,7 +8,7 @@
 			Ofertas
 		</strong>
 	</a>
-	<a href="#" class="menu-link">
+	<a href="#/alerts" class="menu-link">
 		<svg class="icon icon-menu-alerts">
 			<title>Alertas</title>
 			<use xlink:href="#icon-menu-alerts"></use>
@@ -23,7 +23,7 @@
 			<use xlink:href="#icon-menu-add"></use>
 		</svg>
 	</a>
-	<a href="#" class="menu-link">
+	<a href="#/favorites" class="menu-link">
 		<svg class="icon icon-menu-pig">
 			<title>Favoritos</title>
 			<use xlink:href="#icon-menu-pig"></use>
