--- a/views/loginEmail.html
+++ b/views/loginEmail.html
@@ -28,13 +28,13 @@
             </svg>
         </div>
 
-        <a href="#" class="login-forgotPassword">
+        <a href="#/" class="login-forgotPassword">
             Esqueci minha senha
         </a>
 
-        <button type="button" class="btn btn-white login-btnEnter">
+        <a href="#/" type="button" class="btn btn-white login-btnEnter">
             Entrar
-        </button>
+        </a>
 
         <a href="#/criar-conta" class="login-notAccount">
             Não tenho conta
