--- a/views/partials/menu.html
+++ b/views/partials/menu.html
@@ -17,7 +17,7 @@
 			Alertas
 		</strong>
 	</a>
-	<a href="#" class="menu-link">
+	<a href="#/publish" class="menu-link">
 		<svg class="icon icon-menu-add">
 			<title>Adicionar Oferta</title>
 			<use xlink:href="#icon-menu-add"></use>
