--- a/assets/css/scss/components/_btn.scss
+++ b/assets/css/scss/components/_btn.scss
@@ -1,33 +1,15 @@
 .btn {
-    color: #fff;
-    text-transform: uppercase;
-    font-weight: 900;
+    font-size: 14px;
     font-family: $font;
+    font-weight: 900;
+    text-transform: uppercase;
     text-align: center;
-    border: none;
+    color: #fff;
     border-radius: 10px;
-    width: 100%;
-    display: block;
     background-color: #ccc;
     padding: 12px;
-    font-size: 14px;
-
-    &.btn-purple {
-        background-color: $purple;
-    }
-
-    &.btn-black {
-        background-color: #4d4d4d;
-    }
-
-    &.btn-white {
-        background-color: #FFF;
-        color: $purple;
-    }
-
-    &.btn-blue {
-        background-color: #0055a8;
-    }
+    width: 100%;
+    display: block;
 
     .icon {
         width: 16px;
@@ -35,5 +17,38 @@
         position: relative;
         top: 4px;
         margin-right: 4px;
+    }
+}
+
+// BTN COLORS
+.btn-purple {
+    background-color: $purple;
+}
+
+.btn-black {
+    background-color: #4d4d4d;
+}
+
+.btn-white {
+    background-color: #FFF;
+    color: $purple;
+}
+
+.btn-blue {
+    background-color: #0055a8;
+}
+
+// BTN CIRCLE
+.btnCircle {
+    width: 46px;
+    height: 46px;
+    background-color: $purple;
+    border-radius: 50%;
+    padding: 14px 0;
+
+    .icon {
+        fill: #FFF;
+        width: 18px;
+        height: 18px;
     }
 }
