--- a/assets/css/scss/components/_inputGroup.scss
+++ b/assets/css/scss/components/_inputGroup.scss
@@ -1,14 +1,41 @@
 .inputGroup {
+    text-align: left;
     position: relative;
-    margin-bottom: 8px;
+    margin-bottom: 26px;
 
     .inputGroup-label {
+        font-size: 14px;
+        color: #4a4a4a;
+        text-transform: uppercase;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        transition: all 0.2s ease;
+        transform-origin: 0% 100%;
+        transform: translateY(-6px);
 
+        &.active {
+            color: $purple;
+            transform: translateY(-22px) scale(0.8);
+            transform-origin: 0 0;
+            font-size: 12px;
+            font-weight: bold;
+
+            small {
+                opacity: 0;
+            }
+        }
+
+        small {
+            color: #999;
+            font-size: 10px;
+            transition: opacity 0.2s ease;
+        }
     }
 
     .inputGroup-field {
-        padding: 10px;
-        border-bottom: 1px solid #9e9e9e;
+        padding: 5px 0;        
+        border-bottom: 1px solid #999;
         width: 100%;
     }
 
