--- a/assets/css/scss/pages/_login.scss
+++ b/assets/css/scss/pages/_login.scss
@@ -42,6 +42,7 @@
     .inputGroup-field {
         color: #FFF;
         border-color: #e5d6e6;
+        padding: 10px;
         @include inputPlaceholder(#e5d6e6);
     }
 
