--- a/views/home.html
+++ b/views/home.html
@@ -5,7 +5,7 @@
 		O QUE VOCÊ QUER VER?
 	</strong>
 
-	<div data-ng-include="'views/partials/nav-cat.html'"></div>
+	<div data-ng-include="'views/partials/navCategory.html'"></div>
 
 	<div data-ng-include="'views/partials/offer-list.html'"></div>
 </main>
