--- a/views/partials/offer-list.html
+++ b/views/partials/offer-list.html
@@ -3,28 +3,28 @@
         <svg class="icon icon-location">
             <use xlink:href="#icon-location"></use>
         </svg>
-        Até 4 km de você
+        Até {{ homeCtrl.maxCurrentDistance }} km de você
     </h2>
 
     <ul>
-        <li class="offer">
+        <li class="offer" data-ng-repeat="offer in homeCtrl.offers">
             <a href="#/offer">
-                <img src="assets/img/exemplo/oferta-1.jpg" alt="Oferta 1" class="offer-img">
+                <img data-ng-src="{{offer.file.url}}" alt="Oferta 1" class="offer-img">
             </a>
 
             <div class="offer-body">
                 <strong class="offer-body-price">
-                    R$ 20,94
+                    R$ {{offer.price}}
                 </strong>
                 <h3 class="offer-body-description">
-                    Corona 355ml (6 un.)
+                  {{offer.description}}
                 </h3>
 
                 <a href="#location" class="offer-body-location">
                     <svg class="icon icon-map">
                         <use xlink:href="#icon-map"></use>
                     </svg>
-                    Pão de Açúcar
+                    {{offer.place.name}}
                 </a>
                 <div class="offer-actions clear">
                     <a href="#/comments" class="offer-actions-btn">
@@ -32,7 +32,7 @@
                             <use xlink:href="#icon-comment"></use>
                         </svg>
                         <span class="offer-actions-btn-count">
-                            54
+                            {{offer.qtd_comments}}
                         </span>
                     </a>
                     <a href="#like" class="offer-actions-btn active">
@@ -40,7 +40,7 @@
                             <use xlink:href="#icon-pig"></use>
                         </svg>
                         <span class="offer-actions-btn-count">
-                            433
+                            {{offer.qtd_likes}}
                         </span>
                     </a>
                 </div>
