--- a/views/partials/offer-list.html
+++ b/views/partials/offer-list.html
@@ -9,7 +9,7 @@
     <ul>
         <li class="offer" data-ng-repeat="offer in homeCtrl.offers">
             <a href="#/offer">
-                <img data-ng-src="{{offer.file.url}}" alt="Oferta 1" class="offer-img">
+                <img data-ng-src="{{offer.imageLowUrl}}" alt="{{offer.description}}" class="offer-img">
             </a>
 
             <div class="offer-body">
