--- a/views/loginEmail.html
+++ b/views/loginEmail.html
@@ -10,19 +10,19 @@
             <use xlink:href="#icon-back"></use>
         </svg>
     </a>
-
-    <form action="#" autocomplete="off">
+    <form data-ng-submit="loginEmailCtrl.authenticate()" autocomplete="off" novalidate>
+        {{loginEmailCtrl.error}}
         <div class="inputGroup login-inputGroup">
             <svg class="icon icon-menu-user">
                 <use xlink:href="#icon-menu-user"></use>
             </svg>
-            <input type="email" class="inputGroup-field" placeholder="seu e-mail" value="">
+            <input type="email" data-ng-model="loginEmailCtrl.credentials.email" class="inputGroup-field" placeholder="seu e-mail" value="">
         </div>
         <div class="inputGroup login-inputGroup">
             <svg class="icon icon-password">
                 <use xlink:href="#icon-password"></use>
             </svg>
-            <input type="{{inputType}}" id="login-password" class="inputGroup-field" placeholder="sua senha" autocomplete="new-password">
+            <input type="{{inputType}}" data-ng-model="loginEmailCtrl.credentials.password" id="login-password" class="inputGroup-field" placeholder="sua senha" autocomplete="new-password">
             <svg class="icon icon-eye icon-right" ng-click="hideShowPassword()">
                 <use xlink:href="#icon-eye"></use>
             </svg>
@@ -32,9 +32,9 @@
             Esqueci minha senha
         </a>
 
-        <a href="#/" type="button" class="btn btn-white login-btnEnter">
+        <button type="submit" value="Submit" class="btn btn-white login-btnEnter">
             Entrar
-        </a>
+        </button>
 
         <a href="#/criar-conta" class="login-notAccount">
             Não tenho conta
