--- a/views/profile.html
+++ b/views/profile.html
@@ -14,6 +14,8 @@
             <use xlink:href="#icon-search"></use>
         </svg>
     </button>
+
+    <button data-ng-click="profileCtrl.logout()">Sair</button>
 </header>
 
 <main>
