--- a/assets/css/scss/helpers/_reset.scss
+++ b/assets/css/scss/helpers/_reset.scss
@@ -15,7 +15,8 @@ body {
 	font-family: $font;
 	background-color: #f9f4fa;
 	color: $black;
-	overflow-x: hidden;
+    overflow-x: hidden;
+    min-width: 320px;
 }
 
 main {
