--- a/views/comments.html
+++ b/views/comments.html
@@ -1,5 +1,5 @@
 <header class="headerWhite">
-	<a href="#/offer" class="headerWhite-action singleOfferHeader-back">
+	<a href="#/offer" class="headerWhite-action">
 		<svg class="icon icon-back">
 			<use xlink:href="#icon-back"></use>
 		</svg>
