--- a/views/loginEmail.html
+++ b/views/loginEmail.html
@@ -5,7 +5,7 @@
 
     <img src="assets/img/offy-logo.svg" alt="Offy - caminho mais curto para os descontos" width="164">
 
-    <a href="#/login" class="arrowBack arrowBack-absolute">
+    <a href="#/login" class="header-action header-action-absolute">
         <svg class="icon icon-back">
             <use xlink:href="#icon-back"></use>
         </svg>
