--- a/assets/css/scss/components/_headerWhite.scss
+++ b/assets/css/scss/components/_headerWhite.scss
@@ -10,20 +10,23 @@
     background-color: #FFF;
     z-index: $z-index-menu;
 
-    .headerWhite-action {
-        display: inline-flex;
-        padding: 12px 14px;
-    }
-
-    .headerWhite-name {
-        font-size: 16px;
-        white-space: nowrap;
-        margin-right: auto;
-    }
-
     .icon {
         fill: $purple;
+    }
+}
+
+.headerWhite-name {
+    font-size: 16px;
+    white-space: nowrap;
+    margin-right: auto;
+}
+
+.headerWhite-action {
+    display: inline-flex;
+    padding: 12px 14px;
+
+    .icon {
         width: 18px;
         height: 18px;
-    }    
+    }
 }
