--- a/views/publish.html
+++ b/views/publish.html
@@ -1,5 +1,5 @@
 <header class="publishHeader">
-    <a href="#/login" class="arrowBack arrowBack-purple">
+    <a href="#/login" class="header-action header-action-purple">
         <svg class="icon icon-back">
             <use xlink:href="#icon-back"></use>
         </svg>
