--- a/views/login.html
+++ b/views/login.html
@@ -5,7 +5,7 @@
     <img src="assets/img/offy-logo.svg" alt="Offy - caminho mais curto para os descontos" width="164">
 
     <div class="login-actionBtns">
-        <a href="#/" class="btn btn-blue login-btn">
+        <a href="http://localhost:3003/auth/facebook" class="btn btn-blue login-btn">
             Entrar com facebook
         </a>
 
