--- a/views/login.html
+++ b/views/login.html
@@ -4,8 +4,13 @@
     </h1>
     <img src="assets/img/offy-logo.svg" alt="Offy - caminho mais curto para os descontos" width="164">
 
-    <div class="login-actionBtns">				 
-        <a href="https://promocial.herokuapp.com/auth/facebook" class="btn btn-blue login-btn">
+
+    <div class="login-actionBtns">
+				 
+				 <!--
+        <a href="http://localhost:3003/auth/facebook" class="btn btn-blue login-btn">
+		-->
+		<a href="https://promocial.herokuapp.com/auth/facebook" class="btn btn-blue login-btn">
             Entrar com facebook
         </a>
 
