--- a/views/profile.html
+++ b/views/profile.html
@@ -63,9 +63,11 @@
         </div>
     </section>
 
+    <button class="btn btn-purple" data-ng-click="profileCtrl.logout()">Sair</button>
+
     <div data-ng-include="'views/partials/offer-list.html'"></div>
 
-    <button data-ng-click="profileCtrl.logout()">Sair</button>
+
 </main>
 
 <div data-ng-include="'views/partials/menu.html'"></div>
