--- a/views/publish.html
+++ b/views/publish.html
@@ -36,7 +36,7 @@
         </span>
     </section>
 
-    <section class="publish publishStep-maxWidth" ng-show="false">
+    <section class="publish publishStep-maxWidth">
 
         <h1 class="publish-title">
             Boa! Uma oferta!
@@ -59,7 +59,7 @@
 
     </section>
 
-    <section class="publish publishStep-maxWidth" ng-show="false">
+    <section class="publish publishStep-maxWidth">
 
         <h1 class="publish-title">
             Aí sim!
@@ -78,7 +78,7 @@
 
     </section>
 
-    <section class="publish publishStep-maxWidth" ng-show="false">
+    <section class="publish publishStep-maxWidth">
 
         <h1 class="publish-title">
             Escolha uma categoria
