--- a/assets/css/scss/pages/_publish.scss
+++ b/assets/css/scss/pages/_publish.scss
@@ -55,6 +55,20 @@
         fill: $purple;
     }
 }
+
+.publish-progress-iconHidden-2 {
+    width: 20px;
+}
+
+.publish-progress-iconHidden-3 {
+    width: 24px;
+}
+
+.publish-progress-iconHidden-4 {
+    width: 36px;
+}
+
+
 // !PROGRESS
 
 // PUBLISH GENERAL
