--- a/views/favorites.html
+++ b/views/favorites.html
@@ -1,5 +1,5 @@
 <header class="header">
-    <a href="#/" class="header-action">
+    <a href="/" class="header-action">
         <svg class="icon icon-back">
             <use xlink:href="#icon-back"></use>
         </svg>
@@ -20,7 +20,7 @@
 	<section class="offer-list clear">
 	    <ul>
 	        <li class="offer">
-	            <a href="#/offer">
+	            <a href="/offer">
 	                <img src="assets/img/exemplo/oferta-1.jpg" alt="Oferta 1" class="offer-img">
 	            </a>
 
@@ -39,7 +39,7 @@
 	                    Pão de Açúcar
 	                </a>
 	                <div class="offer-actions clear">
-	                    <a href="#/comments" class="offer-actions-btn">
+	                    <a href="/comments" class="offer-actions-btn">
 	                        <svg class="icon icon-comment">
 	                            <use xlink:href="#icon-comment"></use>
 	                        </svg>
@@ -59,7 +59,7 @@
 	            </div>
 	        </li>
 	        <li class="offer">
-	            <a href="#/offer">
+	            <a href="/offer">
 	                <img src="assets/img/exemplo/oferta-1.jpg" alt="Oferta 1" class="offer-img">
 	            </a>
 
@@ -78,7 +78,7 @@
 	                    Pão de Açúcar
 	                </a>
 	                <div class="offer-actions clear">
-	                    <a href="#/comments" class="offer-actions-btn">
+	                    <a href="/comments" class="offer-actions-btn">
 	                        <svg class="icon icon-comment">
 	                            <use xlink:href="#icon-comment"></use>
 	                        </svg>
@@ -98,7 +98,7 @@
 	            </div>
 	        </li>
 	        <li class="offer">
-	            <a href="#/offer">
+	            <a href="/offer">
 	                <img src="assets/img/exemplo/oferta-1.jpg" alt="Oferta 1" class="offer-img">
 	            </a>
 
@@ -117,7 +117,7 @@
 	                    Pão de Açúcar
 	                </a>
 	                <div class="offer-actions clear">
-	                    <a href="#/comments" class="offer-actions-btn">
+	                    <a href="/comments" class="offer-actions-btn">
 	                        <svg class="icon icon-comment">
 	                            <use xlink:href="#icon-comment"></use>
 	                        </svg>
@@ -137,7 +137,7 @@
 	            </div>
 	        </li>
 	        <li class="offer">
-	            <a href="#/offer">
+	            <a href="/offer">
 	                <img src="assets/img/exemplo/oferta-1.jpg" alt="Oferta 1" class="offer-img">
 	            </a>
 
@@ -156,7 +156,7 @@
 	                    Pão de Açúcar
 	                </a>
 	                <div class="offer-actions clear">
-	                    <a href="#/comments" class="offer-actions-btn">
+	                    <a href="/comments" class="offer-actions-btn">
 	                        <svg class="icon icon-comment">
 	                            <use xlink:href="#icon-comment"></use>
 	                        </svg>
@@ -176,7 +176,7 @@
 	            </div>
 	        </li>
 	        <li class="offer">
-	            <a href="#/offer">
+	            <a href="/offer">
 	                <img src="assets/img/exemplo/oferta-1.jpg" alt="Oferta 1" class="offer-img">
 	            </a>
 
@@ -195,7 +195,7 @@
 	                    Pão de Açúcar
 	                </a>
 	                <div class="offer-actions clear">
-	                    <a href="#/comments" class="offer-actions-btn">
+	                    <a href="/comments" class="offer-actions-btn">
 	                        <svg class="icon icon-comment">
 	                            <use xlink:href="#icon-comment"></use>
 	                        </svg>
