--- a/views/login.html
+++ b/views/login.html
@@ -9,11 +9,11 @@
             Entrar com facebook
         </a>
 
-        <a href="#/entrar-email" class="btn btn-white login-btn">
+        <a href="/entrar-email" class="btn btn-white login-btn">
             Entrar com e-mail
         </a>
 
-        <a href="#/criar-conta" class="btn btn-black login-btn">
+        <a href="/criar-conta" class="btn btn-black login-btn">
             não tenho conta
         </a>
     </div>
