--- a/views/comments.html
+++ b/views/comments.html
@@ -1,5 +1,5 @@
 <header class="headerWhite">
-	<a href="#/offer" class="headerWhite-action">
+	<a href="/offer" class="headerWhite-action">
 		<svg class="icon icon-back">
 			<use xlink:href="#icon-back"></use>
 		</svg>
@@ -12,7 +12,7 @@
 
 <main class="commentsMain">
 
-    <article class="comments">
+    <section class="comments">
         <figure class="comments-img">
             <img src="assets/img/exemplo/user.png" alt="Felipe">
         </figure>
@@ -27,9 +27,9 @@
                  há 3 horas
             </span>
         </div>
-    </article>
+    </section>
 
-    <article class="comments comments-userSpeak">
+    <section class="comments comments-userSpeak">
         <figure class="comments-img">
             <img src="assets/img/exemplo/user.png" alt="Felipe">
         </figure>
@@ -44,9 +44,9 @@
                  há 3 horas
             </span>
         </div>
-    </article>
+    </section>
 
-    <article class="comments">
+    <section class="comments">
         <figure class="comments-img">
             <img src="assets/img/exemplo/user.png" alt="Felipe">
         </figure>
@@ -61,9 +61,9 @@
                  há 3 horas
             </span>
         </div>
-    </article>
+    </section>
 
-    <form action="" class="commentsAdd">
+    <section class="commentsAdd">
         <label for="comments">
     		<svg class="icon icon-comment">
     			<use xlink:href="#icon-comment"></use>
@@ -77,6 +77,6 @@
     			<use xlink:href="#icon-check"></use>
     		</svg>
         </button>
-    </form>
+    </section>
 
 </main>
