--- a/views/loginCreateAccount.html
+++ b/views/loginCreateAccount.html
@@ -5,7 +5,7 @@
         Crie sua conta em 1 minuto :-)
     </h1>
 
-    <a href="#/login" class="header-action header-action-absolute">
+    <a href="/login" class="header-action header-action-absolute">
         <svg class="icon icon-back">
             <use xlink:href="#icon-back"></use>
         </svg>
