--- a/views/offer.html
+++ b/views/offer.html
@@ -1,5 +1,5 @@
 <header class="headerWhite singleOfferHeader js-singleOfferHeader">
-	<a href="#/" class="headerWhite-action singleOfferHeader-back">
+	<a href="/" class="headerWhite-action singleOfferHeader-back">
 		<svg class="icon icon-back">
 			<use xlink:href="#icon-back"></use>
 		</svg>
@@ -35,7 +35,7 @@
 		</h1>
 
 		<div class="singleOffer-action">
-			<a href="#/comments" class="singleOffer-btn">
+			<a href="/comments" class="singleOffer-btn">
 				<svg class="icon icon-comment">
 					<use xlink:href="#icon-comment"></use>
 				</svg>
@@ -88,7 +88,7 @@
 		<button class="btn btn-purple">
 			Ir até a oferta
 		</button>
-		<a href="#/comments" class="btn btn-black">
+		<a href="/comments" class="btn btn-black">
 			<svg class="icon icon-comment">
 		        <use xlink:href="#icon-comment"></use>
 		    </svg>
@@ -100,7 +100,7 @@
 		<img src="assets/img/exemplo/user.png" alt="Felipe Teixeira" class="singleOffer-user-img">
 		<figcaption class="singleOffer-user-name">
 			Publicado por
-			<a href="#" class="singleOffer-user-name-link">
+			<a href="/perfil" class="singleOffer-user-name-link">
 				Felipe Teixeira
 			</a >
 		</figcaption>
