--- a/views/partials/menu.html
+++ b/views/partials/menu.html
@@ -9,7 +9,7 @@
 			Ofertas
 		</strong>
 	</a>
-	<a href="/alerts" class="menu-link" data-ng-class="{'active': $location.path() === '/alerts'}">
+	<a href="/alertas" class="menu-link" data-ng-class="{'active': $location.path() === '/alerts'}">
 		<svg class="icon icon-menu-alerts">
 			<title>Alertas</title>
 			<use xlink:href="#icon-menu-alerts"></use>
@@ -18,13 +18,13 @@
 			Alertas
 		</strong>
 	</a>
-	<a href="/publish" class="menu-link" data-ng-class="{'active': $location.path() === '/publish'}">
+	<a href="/publicar/etapa-1" class="menu-link">
 		<svg class="icon icon-menu-add">
-			<title>Adicionar Oferta</title>
+			<title>Publicar Oferta</title>
 			<use xlink:href="#icon-menu-add"></use>
 		</svg>
 	</a>
-	<a href="/favorites" class="menu-link" data-ng-class="{'active': $location.path() === '/favorites'}">
+	<a href="/favoritos" class="menu-link" data-ng-class="{'active': $location.path() === '/favorites'}">
 		<svg class="icon icon-menu-pig">
 			<title>Favoritos</title>
 			<use xlink:href="#icon-menu-pig"></use>
@@ -33,7 +33,7 @@
 			Favoritos
 		</strong>
 	</a>
-	<a href="/profile" class="menu-link" data-ng-class="{'active': $location.path() === '/profile'}">
+	<a href="/perfil" class="menu-link" data-ng-class="{'active': $location.path() === '/profile'}">
 		<svg class="icon icon-menu-user">
 			<title>Perfil</title>
 			<use xlink:href="#icon-menu-user"></use>
