--- a/views/partials/offer-list.html
+++ b/views/partials/offer-list.html
@@ -8,7 +8,7 @@
 
     <ul>
         <li class="offer" data-ng-repeat="offer in homeCtrl.offers">
-            <a href="#/offer">
+            <a href="/offer">
                 <img data-ng-src="{{offer.file.imageLowUrl}}" alt="{{offer.description}}" class="offer-img">
             </a>
 
@@ -27,7 +27,7 @@
                     {{offer.place.name}}
                 </a>
                 <div class="offer-actions clear">
-                    <a href="#/comments" class="offer-actions-btn">
+                    <a href="/comments" class="offer-actions-btn">
                         <svg class="icon icon-comment">
                             <use xlink:href="#icon-comment"></use>
                         </svg>
