--- a/views/profile.html
+++ b/views/profile.html
@@ -1,5 +1,5 @@
 <header class="header">
-    <a href="#/" class="header-action">
+    <a href="/" class="header-action">
         <svg class="icon icon-back">
             <use xlink:href="#icon-back"></use>
         </svg>
