--- a/assets/scss/module/_btn.scss
+++ b/assets/scss/module/_btn.scss
@@ -18,7 +18,7 @@
 
 // BTN TYPE - CIRCLE
 .btnCircle {
-    display: flex;
+    display: inline-flex;
     align-items: center;
     justify-content: center;
     background-color: #FFF;
