--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -3,9 +3,16 @@
     box-shadow: 0 2px 3px 0 rgba(0,0,0,0.09);
 
     .header-action {
-        display: flex;
-        align-items: center;
         border-bottom: 1px solid #edf1f2;
+
+        @media (min-width: $screen-desktop-min) {
+            display: flex;
+            align-items: center;
+        }
+
+        li {
+            display: inline-flex;
+        }
 
         .header-action-btnMenu {
             @include widthHeight(40px);
@@ -29,11 +36,13 @@
             color: #a0a9b1;
             padding: 12px 22px;
             position: relative;
-            display: block;
+            display: inline-flex;
+            align-items: center;
             transition: color .2s ease;
 
             .icon {
                 @include widthHeight(8px);
+                margin-left: 4px;
             }
 
             &.header-action-link--black {
